# micro-chirp

./: README.md  TODO.md  docker-compose.yml
.atat/: config.json
.devcontainer/: devcontainer.json
.github/scripts/: wait-for-it.sh
.github/workflows/: job-build-server.yml  job-test-medium-api-test.yml  job-test-medium-server.yml  job-test-small-server.yml  on-pullrequest-api-test.yml  on-pullrequest-server.yml
api-tests/: README.md  conftest.py  pyproject.toml
api-tests/lib/: tracing.py
api-tests/tests/: test_auth.py  test_likes.py  test_posts.py  test_replies.py  test_reposts.py  test_timeline.py  test_views.py
database/: atlas.hcl  entrypoint.sh
database/schema/: like_events.sql  post_events.sql  posts_mv.sql  repost_events.sql  view_events.sql  views_global_timeline_mv.sql  z_pg_cron_setup.sql
docs/: spec.md
load-test/: .gitignore  README.md  locust.conf  locustfile.py  pyproject.toml
load-test/lib/: utils.py
load-test/scenarios/: likes.py  posts.py  replies.py  reposts.py  timeline.py
server/: build.gradle.kts  settings.gradle.kts
server/src/integrationTest/kotlin/com/example/: TestcontainersConfiguration.kt
server/src/integrationTest/resources/: application.yml
server/src/main/kotlin/com/example/: MicroChirpApplication.kt
server/src/main/kotlin/com/example/auth/: User.kt  (+3 more)
server/src/main/kotlin/com/microchirp/: MicroChirpApplication.kt
server/src/main/resources/: application.yml
server/src/test/kotlin/com/microchirp/: MicroChirpApplicationTests.kt  TestMicroChirpApplication.kt  TestcontainersConfiguration.kt
spec/: openapi.yml
(+53 files in other folders)
